--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,13 +1,14 @@
 
 {{ define "main" }}
-<section style="height: 100vh; display: flex; justify-content: center; padding: 100px;">
-	<div style="width: 50vw;">
-		<div style="font-size: 64px;">
-			{{ .Title }}
-		</div>
-		<div>
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<h1>
+			<!-- {{ .Title}} -->
+			</h1>
 			{{.Content}}
+			
 		</div>
 	</div>
-</section>
+</div>	
 {{ end }}
