--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,48 +1,47 @@
 {{ define "main" }}
+<!-- start -->
 
-<div class="container">
-    <div class="row">
-        <div class="column">
-            <h1>index.html</h1>
-        </div>
-    </div>
+<div class="container-fluid p-5">
+	<div class="row justify-content-center">
+		<div class="col-11 col-md-8 col-lg-6 pb-5">
+			
+			<h3 style="text-align: center;">
+				Hey! I'm Anthony Ngo 👋
+			<h3>
+			<h5 style="text-align: center;">
+				I'm a software developer focused on delivering solutions for large organizations, small-businesses, and individuals through technology
+				<br>
+				<br>
+				Currently developing UI @ Aptive Education
+				<br>
+				<br>
+				Here are some of my projects
+			</h5>
+		</div>
+	</div>
+	<div class="row gy-2 gx-2">
+		{{ $p := (where site.RegularPages "Type" "projects").ByPublishDate.Reverse }}
+		{{ range (.Paginate $p).Pages }}
+			<div class="col-12 col-lg-6"> 	
+				<!-- <a href="{{ .RelPermalink }}" class="text-body"> -->
+				<a href="{{ .Params.link }}" class="text-body" target="_blank">
+					<div class="overlay-container ratio ratio-1x1">
+						<img src="{{.Params.featuredImage}}" alt="{{.Title}}" style="object-fit: cover; object-position: center; border-radius: 5px;">
+						<div class="overlay w-100">
+							<div class="overlay-text">
+							<h3 class="text-dark">
+								{{.Title}}
+							</h3>
+							<p>{{ .Content}}</p>
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>		
+		{{ end }}
+		<!-- {{ template "_internal/pagination.html" . }} -->
+	</div>
 </div>
 
-
-<!-- <ul>
-
-   
-    {{ range .Paginator.Pages.ByPublishDate.Reverse }}
-        <li style="padding: 10px;">  
-            <a href="{{ .RelPermalink }}">
-                <div>
-                    {{ .Date.Format "2006-01-02" }}
-                </div>
-                <div>
-                    {{ .Title }} 	
-                </div>
-            </a>
-        </li>
-    {{ end }}
-    {{ template "_internal/pagination.html" . }}
-</ul>
-
-<ul> -->
-<ul>
-    {{ $p := where site.RegularPages "Section"  "projects" }}    
-    {{ range (.Paginate $p).Pages.ByPublishDate.Reverse }}
-        <li style="padding: 10px;">  
-            <a href="{{ .RelPermalink }}">
-                <div>
-                    {{ .Date.Format "2006-01-02" }}
-                </div>
-                <div>
-                    {{ .Title }} 	
-                </div>
-            </a>
-        </li>
-    {{ end }}
-    {{ template "_internal/pagination.html" . }}
-</ul>
- 
+<!-- end  -->
 {{end}}
