--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,6 +22,7 @@
 				Here are some of my projects
 			</h5>
 			<!-- Hero sub-heading  -->
+
 		</div>
 	</div>
 
@@ -32,10 +33,11 @@
 			<div class="col-12 col-lg-6"> 	
 				<!-- <a href="{{ .RelPermalink }}" class="text-body"> -->
 				<a href="{{ .Params.link }}" class="text-body" target="_blank">
+					<!-- <div class="overlay-container ratio ratio-1x1"> -->
 					<div class="overlay-container ratio ratio-1x1">
 						<img src="{{.Params.featuredImage}}" alt="{{.Title}}" class="project-img">
 						<div class="overlay d-flex align-items-center">
-							<div class="overlay-text px-5">
+							<div class="text-center px-5">
 								
 								<!-- Card content  -->
 								<h3>
